Fix images overlapping label

--- a/client/src/components/CreateOrUpdateForm/CreateOrUpdateForm.scss
+++ b/client/src/components/CreateOrUpdateForm/CreateOrUpdateForm.scss
@@ -237,7 +237,6 @@
     }
 
     .images-for-update-container {
-        margin-top: -3rem;
         display: flex;
 
         .image-for-update-container {
